feedback fixes x2 alignment etc

--- a/src/client/components/dimension-tile/dimension-tile.scss
+++ b/src/client/components/dimension-tile/dimension-tile.scss
@@ -8,10 +8,6 @@ $folder-box-height: 32px;
   min-height: 94px;
   overflow-y: hidden;
 
-  &.has-actions {
-    overflow-y: visible;
-  }
-
   &.has-folder .rows {
     bottom: $folder-box-height;
   }
